@@ -2,6 +2,7 @@ package com.staccato.memory.service;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import com.staccato.memory.domain.Memory;
 import com.staccato.memory.domain.MemoryMember;
 import lombok.RequiredArgsConstructor;
@@ -10,13 +11,15 @@ import lombok.RequiredArgsConstructor;
 public class MemoryMembers {
     private final List<MemoryMember> memoryMembers;
 
-    public void descendByCreatedDate() {
-        memoryMembers.sort(Comparator.comparing(MemoryMember::getCreatedAt).reversed());
+    public List<Memory> descendMemoryByUpdatedAt() {
+        List<Memory> memories = getMemories();
+        memories.sort(Comparator.comparing(Memory::getUpdatedAt).reversed());
+        return memories;
     }
 
-    public List<Memory> getMemories() {
+    private List<Memory> getMemories() {
         return memoryMembers.stream()
                 .map(MemoryMember::getMemory)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
